# rinha-backend-rust

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose-axum-local.yml  docker-compose-axum-prod.yml  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-touche-local.yml  docker-compose-touche-prod.yml  docker-compose.yml  nginx.conf
.cargo/: config.toml
.sqlx/: query-4f8b2c9f0650fc6dc5decad9a1921dd468413673860a265264007f4d79e1d222.json  query-544dfa0164d4a203127230f6e7cc20ef7fb652377443adcaafda66f82d44239e.json  query-744323a888b068de1b4329fb2f2f1ec1cf4aef7229acaabfefdd2fe073412af6.json  query-88dcf9a620bb0acf442753de1be10611a12d99bd0254ee585229b693efb581d6.json  query-be7a47438fe43899e0a8cda76075c532153d4657d5fa0b044acecf55a2320f70.json  query-f2a03517fae9c6a555358b3bd1ac0cad2164791f0238c91be6f3ae48233e7df4.json  query-f664b4588555c325d82f931c541e1d54226712cce0642cfe34de9da77788e72f.json
db/: v0001__create_people.sql
rinha-axum/: Cargo.toml  Dockerfile
rinha-core/: Cargo.toml
rinha-core/src/: lib.rs
rinha-touche/: Cargo.toml  Dockerfile
rinha-touche/src/: main.rs  persistence.rs
rinhabackendsimulation-20230820175353614/: index.html  req_busca-inva-lida-b5618.html  req_busca-va-lida-d7f0d.html  req_consulta-5d76b.html  req_criac-a-o-ce502.html
rinhabackendsimulation-20230820181203128/: index.html  req_busca-inva-lida-b5618.html  req_busca-va-lida-d7f0d.html  req_consulta-5d76b.html  req_criac-a-o-ce502.html
rinhabackendsimulation-20230821171036626/: index.html  req_busca-inva-lida-b5618.html  req_busca-va-lida-d7f0d.html  (+2 more)
(+123 files in other folders)
