[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
time = { version = "0.3.25", features = ["macros", "serde", "formatting", "parsing"] }
tokio = { version = "1.30.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v7", "serde"] }
