[package]
name = "rinha-touche"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[dependencies]
dashmap = "5.5.0"
postgres = { version = "0.19.5", features = ["array-impls", "with-time-0_3", "with-uuid-1"] }
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
rinha-core = { path = "../rinha-core" }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
serde_urlencoded = "0.7.1"
time = { version = "0.3.25", features = ["macros", "serde", "formatting", "parsing"] }
touche = "0.0.7"
uuid = { version = "1.4.1", features = ["v7", "serde"] }
